--- a/index.html
+++ b/index.html
@@ -231,6 +231,18 @@
               </p>
             </div>
 
+            <div class="resume-item">
+              <h4>Front-End Developer Intern</h4>
+              <h5>2023 March - Present</h5>
+              <p><em>Side Hustle, Ibadan, Nigeria </em></p>
+              <p>
+              <ul>
+                <li>Went through the basis of git and html</li>
+                <li>Learnt fully on what front end development is</li>
+              </ul>
+              </p>
+            </div>
+
           </div>
         </div>
 
