--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <div class="col-md-6 mt-5 d-md-flex align-items-md-stretch">
                   <div class="count-box">
                     <i class="bi bi-journal-richtextr" style="color: #8a1ac2;"></i>
-                    <span data-purecounter-start="0" data-purecounter-end="14" data-purecounter-duration="1"
+                    <span data-purecounter-start="0" data-purecounter-end="26" data-purecounter-duration="1"
                       class="purecounter"></span>
                     <p><strong>Projects</strong>
                     </p>
@@ -233,7 +233,7 @@
 
             <div class="resume-item">
               <h4>Front-End Developer Intern</h4>
-              <h5>2023 March - Present</h5>
+              <h5>2023 March - April</h5>
               <p><em>Side Hustle, Ibadan, Nigeria </em></p>
               <p>
               <ul>
@@ -326,12 +326,12 @@
 
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-img"><img src="assets/img/portfolio/blog.jpg" class="img-fluid" alt=""></div>
+            <div class="portfolio-img"><img src="assets/img/portfolio/newport.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
-              <h4>BLOG</h4>
+              <h4>LM Product</h4>
               <p>Web</p>
-              <a href="assets/img/portfolio/blog.jpg" data-gallery="portfolioGallery"
-                class="portfolio-lightbox preview-link" title="BLOG"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/portfolio/newport.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="LM Product"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
