--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -101,7 +101,7 @@
               <ul>
                 <li><strong>Category</strong>: Web design</li>
                 <li><strong>Project Name</strong>: Molinge</li>
-                <li><strong>Project URL</strong>: <a href="https://github.com/lucidwrld/Molinge">www.Molinge.com</a>
+                <li><strong>Project URL</strong>: <a href="https://molinge1.netlify.app/">www.Molinge.com</a>
                 </li>
               </ul>
             </div>
@@ -149,7 +149,7 @@
               <ul>
                 <li><strong>Category</strong>: Web design</li>
                 <li><strong>Project Name</strong>: Weather Forecast</li>
-                <li><strong>Project URL</strong>: <a href="https://github.com/lucidwrld/Weather-Api-App">www.Weather
+                <li><strong>Project URL</strong>: <a href="https://weather-webapp-ap.netlify.app/">www.Weather
                     Forecast.com</a></li>
               </ul>
             </div>
@@ -198,7 +198,7 @@
               <ul>
                 <li><strong>Category</strong>: Web design</li>
                 <li><strong>Project Name</strong>: Jumia Food</li>
-                <li><strong>Project URL</strong>: <a href="https://github.com/lucidwrld/JUMIA-FOOD-CLONE">www.Jumia
+                <li><strong>Project URL</strong>: <a href="https://lucidwrld.github.io/Jumia-food/">www.Jumia
                     Food.com</a></li>
               </ul>
             </div>
@@ -246,7 +246,7 @@
               <ul>
                 <li><strong>Category</strong>: Web design</li>
                 <li><strong>Project Name</strong>: CHOW</li>
-                <li><strong>Project URL</strong>: <a href="https://github.com/lucidwrld/CHOW-company">www.CHOW.com</a>
+                <li><strong>Project URL</strong>: <a href="https://lucidwrld.github.io/Chow/">www.CHOW.com</a>
                 </li>
               </ul>
             </div>
@@ -296,7 +296,7 @@
               <ul>
                 <li><strong>Category</strong>: Web design</li>
                 <li><strong>Project Name</strong>: Lacasto Minato</li>
-                <li><strong>Project URL</strong>: <a href="https://github.com/lucidwrld/LM">www.Lacasto Minato.com</a>
+                <li><strong>Project URL</strong>: <a href="https://lucidwrld.github.io/LM/">www.Lacasto Minato.com</a>
                 </li>
               </ul>
             </div>
@@ -323,15 +323,15 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/blo1.jpg" alt="">
+                  <img src="assets/img/portfolio/newport.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/blo2.jpg" alt="">
+                  <img src="assets/img/portfolio/newport1.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/blo3.jpg" alt="">
+                  <img src="assets/img/portfolio/newport2.jpg" alt="">
                 </div>
 
               </div>
@@ -344,17 +344,16 @@
               <h3>Project information</h3>
               <ul>
                 <li><strong>Category</strong>: Web design</li>
-                <li><strong>Project Name</strong>: BLOG</li>
-                <li><strong>Project URL</strong>: <a
-                    href="https://github.com/lucidwrld/BLOG-using-React">www.BLOG.com</a></li>
+                <li><strong>Project Name</strong>: LM Virtual</li>
+                <li><strong>Project URL</strong>: <a href="https://landingpageside.netlify.app">www.lmvirtual.com</a>
+                </li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>About</h2>
               <p>
-                BLOG is a project using the React JavaScript library. The website has a clean and modern design, with a
-                focus on user experience and performance. The blog is easy to navigate, and allows users to read
-                articles, leave comments, delete articles, and edit articles.
+                LM Virtual is product landing page that revolves around a virtual reality product. Aimed at selling its
+                new product and increasing public awareness while acheiving easy acquiring methods.
               </p>
             </div>
           </div>
