--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
                   <ul>
 
                     <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Course:</strong> <span>Computer Science</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>benkabiawu@gmail.com</span>
                     </li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
@@ -149,6 +150,13 @@
                 <span class="skill">React <i class="val">65%</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">
+                  </div>
+                </div>
+              </div>
+              <div class="progress">
+                <span class="skill">Angular <i class="val">80%</i></span>
+                <div class="progress-bar-wrap">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                   </div>
                 </div>
               </div>
@@ -217,16 +225,33 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Front-End Developer Intern</h4>
-              <h5>2023 - Present</h5>
-              <p><em>NSIA Insurance, Victoria Island, Nigeria </em></p>
+              <h4>Front-End Developer </h4>
+              <h5>2023 May - Present</h5>
+              <p><em><a href="https://www.gurutechhq.com.ng/">Gurutechnology</a> </em></p>
               <p>
               <ul>
-                <li>Management and updating of company's website</li>
-                <li>Providing support to staffs issues with systems</li>
-                <li>Management and updating of company's mobile app</li>
-                <li>Providing support to team members in setting up lan networks</li>
-                <li>Assisting in making sure company serve is not down</li>
+                <li>Provided quality service in delivering projects before deadline</li>
+                <li>Efficiently developed quality, well detailed and responsive websites</li>
+                <li>Optimized websites for clients to boost loading speed</li>
+              </ul>
+              </p>
+            </div>
+            <div class="resume-item">
+              <h4>Front-End Developer Intern</h4>
+              <h5>2023 January - Present</h5>
+              <p><em><a href="http://nsiainsurance.com/">NSIA Insurance, Victoria Island, Nigeria</a> </em></p>
+              <p>
+              <ul>
+                <li>Established a database structure that allows designated personnel to review and modify data, as well
+                  as generate new entries</li>
+                <li>Configured the omputers for use by staff</li>
+                <li>Effectively installed and tested LAN cables, and connected themm to the LAN phones</li>
+                <li>Successfully created a new page on the company's website to showcast an event hosted by the company
+                </li>
+                <li>Effectively resolved issues where staff members were unable to receive emails on their outlook
+                  accounts</li>
+                <li>Improved the company's website board and management team section loading speed by creating a
+                  database where designated personnel to review and modify data, as well as generate new entries</li>
               </ul>
               </p>
             </div>
@@ -234,11 +259,13 @@
             <div class="resume-item">
               <h4>Front-End Developer Intern</h4>
               <h5>2023 March - April</h5>
-              <p><em>Side Hustle, Ibadan, Nigeria </em></p>
+              <p><em><a href="https://lms.terrahq.co/">Side Hustle, Ibadan, Nigeria</a> </em></p>
               <p>
               <ul>
-                <li>Went through the basis of git and html</li>
-                <li>Learnt fully on what front end development is</li>
+                <li>Effectively and easily finished all weekly tasks assigned to me</li>
+                <li>Developed a landing page for a product as tasked and intergrated a checkout page into it with
+                  success</li>
+                <li>Developed websites that feature responsive design, capable of adapting to any screen size</li>
               </ul>
               </p>
             </div>
