--- a/index.html
+++ b/index.html
@@ -137,9 +137,23 @@
                   </div>
                 </div>
               </div>
-
+              <div class="progress">
+                <span class="skill">SASS <i class="val">100%</i></span>
+                <div class="progress-bar-wrap">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0"
+                    aria-valuemax="100">
+                  </div>
+                </div>
+              </div>
               <div class="progress">
                 <span class="skill">JavaScript <i class="val">85%</i></span>
+                <div class="progress-bar-wrap">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
+                  </div>
+                </div>
+              </div>
+              <div class="progress">
+                <span class="skill">TypeScript <i class="val">85%</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
                   </div>
@@ -225,14 +239,26 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
+              <h4>Ambassador </h4>
+              <h5>2023 May - Present</h5>
+              <p><em><a href="https://cowrywise.com/">CowryWise</a> </em></p>
+              <p>
+              <ul>
+
+              </ul>
+              </p>
+            </div>
+            <div class="resume-item">
               <h4>Front-End Developer </h4>
               <h5>2023 May - Present</h5>
               <p><em><a href="https://www.gurutechhq.com.ng/">Gurutechnology</a> </em></p>
               <p>
               <ul>
-                <li>Provided quality service in delivering projects before deadline</li>
-                <li>Efficiently developed quality, well detailed and responsive websites</li>
-                <li>Optimized websites for clients to boost loading speed</li>
+                <li>Efficiently delivered well detailed websites to clients based on their
+                  requests</li>
+                <li>Effectively completed all clients requests before deadline to increase
+                  client satisfaction</li>
+                <li>Optimized clients website based on clients needs</li>
               </ul>
               </p>
             </div>
@@ -242,16 +268,20 @@
               <p><em><a href="http://nsiainsurance.com/">NSIA Insurance, Victoria Island, Nigeria</a> </em></p>
               <p>
               <ul>
-                <li>Established a database structure that allows designated personnel to review and modify data, as well
-                  as generate new entries</li>
-                <li>Configured the omputers for use by staff</li>
-                <li>Effectively installed and tested LAN cables, and connected themm to the LAN phones</li>
-                <li>Successfully created a new page on the company's website to showcast an event hosted by the company
+                <li>Effectively established a database structure based on firebase
+                  database and implemented it on the company’s website which runs in
+                  angular, the structure provides specific staff members ability to access
+                  and modify data being displayed on the company’s website.</li>
+                <li>Efficiently set up and configured computer systems for staff members
+                  and ensured it was to their satisfaction</li>
+                <li>Resolved issues staff members had with their LAN phones by testing
+                  both LAN cables and phones to figure out the exact issue and
+                  replacing the LAN cables</li>
+                <li>Resolved issues staff members had with sending internal mails through
+                  outlook by analyzing their internet connection and reconfiguring their
+                  internet connections
                 </li>
-                <li>Effectively resolved issues where staff members were unable to receive emails on their outlook
-                  accounts</li>
-                <li>Improved the company's website board and management team section loading speed by creating a
-                  database where designated personnel to review and modify data, as well as generate new entries</li>
+
               </ul>
               </p>
             </div>
@@ -262,10 +292,12 @@
               <p><em><a href="https://lms.terrahq.co/">Side Hustle, Ibadan, Nigeria</a> </em></p>
               <p>
               <ul>
-                <li>Effectively and easily finished all weekly tasks assigned to me</li>
-                <li>Developed a landing page for a product as tasked and intergrated a checkout page into it with
-                  success</li>
-                <li>Developed websites that feature responsive design, capable of adapting to any screen size</li>
+                <li>Completely implemented all weekly tasks efficiently before their
+                  deadline</li>
+                <li>Effectively implemented web responsiveness in each website assigned
+                  to me and made sure it was suited for user needs</li>
+                <li>Developed well detailed website to improve user’s experience and
+                  quality</li>
               </ul>
               </p>
             </div>
@@ -293,6 +325,16 @@
         </ul>
 
         <div class="row portfolio-container">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-img"><img src="assets/img/lendsqr.jpg" class="img-fluid" alt=""></div>
+            <div class="portfolio-info">
+              <h4>LendSQR Project</h4>
+              <p>Web</p>
+              <a href="assets/img/lendsqr.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link"
+                title="LendSQR"><i class="bx bx-plus"></i></a>
+              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-img"><img src="assets/img/portfolio/mol1.jpg" class="img-fluid" alt=""></div>
@@ -315,19 +357,6 @@
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-img"><img src="assets/img/portfolio/jum1.jpg" class="img-fluid" alt=""></div>
-            <div class="portfolio-info">
-              <h4>Jumia Food</h4>
-              <p>Web</p>
-              <a href="assets/img/portfolio/jum1.jpg" data-gallery="portfolioGallery"
-                class="portfolio-lightbox preview-link" title="Jumia Food"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
-
-
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-img"><img src="assets/img/portfolio/cho1.jpg" class="img-fluid" alt=""></div>
@@ -442,8 +471,6 @@
       </div>
 
       <div class="credits">
-
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
   </footer><!-- End Footer -->
