--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -70,7 +70,54 @@
 
     <!-- ======= Portfolio Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
-      <div class="container">
+      <div class="container my">
+
+        <div class="row gy-4">
+
+          <div class="col-lg-8">
+            <div class="portfolio-details-slider swiper">
+              <div class="swiper-wrapper align-items-center">
+
+                <div class="swiper-slide">
+                  <img src="assets/img/lendsqr1.jpg" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/lendsqr.jpg" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/lendsqr2.jpg" alt="">
+                </div>
+
+              </div>
+              <div class="swiper-pagination"></div>
+            </div>
+          </div>
+
+          <div class="col-lg-4">
+            <div class="portfolio-info">
+              <h3>Project information</h3>
+              <ul>
+                <li><strong>Category</strong>: Web design</li>
+                <li><strong>Project Name</strong>: LendSQR Project</li>
+                <li><strong>Project URL</strong>: <a href="https://lucidwrld.github.io/Jumia-food/">www.Lendsqp-Project
+                    .com</a></li>
+              </ul>
+            </div>
+            <div class="portfolio-description">
+              <h2>About</h2>
+              <p>
+                This react app reads mock api and displays it on the site, making it accessible to be modify based on
+                staff needs
+              </p>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+      <div class="container my-5">
 
         <div class="row gy-4">
 
@@ -167,53 +214,7 @@
 
       </div>
 
-      <div class="container my-5">
 
-        <div class="row gy-4">
-
-          <div class="col-lg-8">
-            <div class="portfolio-details-slider swiper">
-              <div class="swiper-wrapper align-items-center">
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/jum1.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/jum2.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/jum3.jpg" alt="">
-                </div>
-
-              </div>
-              <div class="swiper-pagination"></div>
-            </div>
-          </div>
-
-          <div class="col-lg-4">
-            <div class="portfolio-info">
-              <h3>Project information</h3>
-              <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Project Name</strong>: Jumia Food</li>
-                <li><strong>Project URL</strong>: <a href="https://lucidwrld.github.io/Jumia-food/">www.Jumia
-                    Food.com</a></li>
-              </ul>
-            </div>
-            <div class="portfolio-description">
-              <h2>About</h2>
-              <p>
-                This is a simple clone of the famously known food delivery company called Jumia Food. The aim of this
-                project was to imitate their design as best as I could.
-              </p>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
 
       <div class="container my-5">
 
